    compressible is compressed (JSON, XML, HTML, text, ...).  DICOM files are never
    compressed over HTTP.  In prior versions, all content types were compressed.
    This notably greatly improve loading time of large DICOM 
    files through WADO-RS e.g in StoneViewer when working on large bandwidth networks.
  - When "HttpCompressionEnabled" is true, content < 2KB are never compressed.

REST API
--------

* API version upgraded to 22
* Added a route to delete completed jobs from history: DELETE /jobs/{id}
* All 'expand' GET arguments now accepts expand=true and expand=false values.
  The /studies/../instances and sibling routes are the only whose expand is true if not specified.
  These routes now accepts expand=false to simply list the child resources ids.


Maintenance
-----------

* Fix unit test PngWriter.Color16Pattern on big-endian architectures,
  as suggested by Etienne Mollier: https://bugs.debian.org/cgi-bin/bugreport.cgi?bug=1041813
* Prevent the leak of the full path of the source files in the binaries
* Fix loading of DCMTK dictionary in the MultitenantDicom plugin when built dynamically:
  https://discourse.orthanc-server.org/t/dimse-failure-using-multitenant-plugin/3665
* Housekeeper: Introduced a 'sleep' to lower CPU usage when idle.
* Support multiple values in SpecificCharacterSet in C-Find answers:
  https://discourse.orthanc-server.org/t/c-find-fails-on-unknown-specific-character-set-iso-2022-ir-6-iso-2022-ir-100/3947
* When exporting a study archive, make sure to use the PatientName from the study and not from the patient
  in case of PatientID collision.
* Upgraded dependencies for static builds:
  - boost 1.83.0


Version 1.12.1 (2023-07-04)
===========================

General
-------

* Orthanc now anonymizes according to Basic Profile of PS 3.15-2023b Table E.1-1
* Added metrics:
  - "orthanc_storage_read_bytes" 
  - "orthanc_storage_written_bytes"
  - "orthanc_memory_trimming_duration_ms"

REST API
--------
